--- a/src/component/pages/cafe/Map/map.module.scss
+++ b/src/component/pages/cafe/Map/map.module.scss
@@ -1,8 +1,9 @@
 .mapContainer {
   padding: 20px;
+  width: 100%;
   & img {
     width: 100%;
     height: 100%;
   }
 }
-
+           
