--- a/src/component/pages/cafe/cafe.module.scss
+++ b/src/component/pages/cafe/cafe.module.scss
@@ -1,13 +1,12 @@
 $_text_size_mobile: 18px;
 
 .container {
-  min-height: 100vh;
-  width: 100%;
   display: flex;
   flex-direction: column;
   font-family: 'Figtree-Regular';
   color: var(--dark-grey);
-  padding-bottom: 30px;
+  min-height: 100vh;
+  width: 100%;
 }
 
 .wrapper {
@@ -15,8 +14,6 @@ $_text_size_mobile: 18px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100vh;
 }
 
 .loadingSpinner {
@@ -31,7 +28,6 @@ $_text_size_mobile: 18px;
   align-items: center;
 }
 
-/* Cafe name, price, and favourite button */
 .cafeTitle {
   display: flex;
   justify-content: flex-start;
@@ -47,32 +43,16 @@ $_text_size_mobile: 18px;
   }
 }
 
-.cafeTitle img {
-  width: 55px;
-  height: 55px;
-  @media (min-width: 600px) {
-    width: 70px;
-    height: 70px;
-  }
-}
-
-.cafeTitle {
-  display: flex;
-  flex-direction: row;
-}
-
 .cafeName {
   font-weight: 600;
   padding: 15px;
 }
-/* END */
 
-/* Cafe information */
 .infoSection {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 100vw;
+  width: 100%;
   @media (min-width: 1280px) {
     flex-direction: row;
   }
@@ -90,7 +70,7 @@ $_text_size_mobile: 18px;
 .cafeInfoWrapper {
   display: flex;
   flex-direction: column;
-  width: 40vw;
+  width: 100%;
 }
 
 .cafeStatus label {
@@ -111,7 +91,7 @@ $_text_size_mobile: 18px;
   border-color: grey;
   border-top: solid 3px var(--light-grey);
   border-bottom: solid 3px var(--light-grey);
-  width: 100vw;
+  width: 100%;
   height: auto;
   padding: 20px;
   margin-top: 20px;
@@ -143,6 +123,10 @@ $_text_size_mobile: 18px;
   font-size: $_text_size_mobile;
 }
 
+.cafePriceLabel {
+  display: flex;
+}
+
 .busynessIcon {
   transform: scale(1.0);
   margin-top: -5px;
@@ -155,10 +139,6 @@ $_text_size_mobile: 18px;
   margin-left: 5px;
 }
 
-.cafePriceLabel {
-  display: flex;
-}
-
 .priceIconGroup {
   margin-left: 13px;
 }
@@ -168,28 +148,6 @@ $_text_size_mobile: 18px;
   margin-top: -5px;
   margin-left: -12px;
 }
-/* END */
-
-/* Image carousel */
-.carouselWrapper {
-  display: flex;
-  justify-content: center;
-}
-
-.cafeImages {
-  height: 500px;
-  margin: 0px 15px;
-  @media (max-width: 600px) {
-    height: 350px;
-  }
-}
-
-.cafeImages img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
-/* END */
 
 .dropdown {
   display: flex;
